Bug 99258 - win7 crashes when resize to 2560x1600
Summary: win7 crashes when resize to 2560x1600
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: server (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-01-03 14:43 UTC by Pavel Grunt
Modified: 2017-01-05 10:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
backtrace (2.23 KB, text/plain)
2017-01-03 14:43 UTC, Pavel Grunt
Details

Description Pavel Grunt 2017-01-03 14:43:30 UTC
Created attachment 128726 [details]
backtrace

spice server crashes when resize a win7 guest to higher resolution

reproducible: 100%

Version:
current master 0ace8a81c7d673b8a82a75358eb434db3b197486
Comment 1 Pavel Grunt 2017-01-03 15:23:48 UTC
Regression since a43c21b6bcdda701763afb6d73e38a3c419e54c7
DCC: change how fill_bits() marshalls data by reference
Comment 2 Pavel Grunt 2017-01-03 15:46:59 UTC
and image compression has to be 'off'
Comment 3 Frediano Ziglio 2017-01-03 17:41:55 UTC
Got some reproduction just:
- using --spice-preferred-compression=off in remote-viewer;
- maximizing remote-viewer;
- doing some "Zoom out".
However I'm getting different crashes in different part of the code (image-cache, display-channel, red-pipe-item).
Trying with address sanitizer you get even different results.
Looks like some code assumption causing an invalid internal state.
Comment 4 Pavel Grunt 2017-01-04 08:54:36 UTC
yeah, zooming out in fullscreen causes increase of resolution.

oneliner is:
virt-viewer -a -f -z 50 --spice-preferred-compression=off
or 
remote-viewer -f -z 50 --spice-preferred-compression=off
Comment 6 Frediano Ziglio 2017-01-05 10:13:40 UTC
Patches merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.